// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareDashboardDialog > renders correctly if first page is visible 1`] = `
<div
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Share dashboard"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <div
      class="mx-2"
    >
      <v-stepper-stub
        altlabels="false"
        border="false"
        class="mb-2"
        disabled="false"
        editable="false"
        flat="false"
        hideactions="false"
        itemprops="props"
        items=""
        itemtitle="title"
        itemvalue="value"
        mandatory="force"
        mobile="false"
        modelvalue="1"
        multiple="false"
        nexttext="$vuetify.stepper.next"
        nonlinear="false"
        prevtext="$vuetify.stepper.prev"
        selectedclass="v-stepper-item--selected"
        tag="div"
        tile="false"
      >
        <v-stepper-header-stub
          tag="div"
        >
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="1"
          >
            Tabs
          </v-stepper-item-stub>
          <v-divider-stub
            gradient="false"
            inset="false"
            variant="solid"
            vertical="false"
          />
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="2"
          >
            Users
          </v-stepper-item-stub>
        </v-stepper-header-stub>
      </v-stepper-stub>
      <selection-list-stub
        checkbox="true"
        dense="false"
        disabled="false"
        emptyequalsallselected="false"
        height="auto"
        hidesearch="true"
        hideselectall="false"
        isdropdown="true"
        issearchfocused="false"
        issingleselect="false"
        itemdisabled=""
        itemflag=""
        itemiconcolorkey=""
        items="[object Object],[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtext="name"
        itemvalue="id"
        loading="false"
        maxheight="491.20000000000005px"
        maxwidth=""
        modelvalue=""
        required="false"
        search=""
        searchbysecondarytext="false"
        someselected="false"
        valid="true"
      />
      <!--v-if-->
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <!--v-if-->
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      color=""
      disabled="true"
      icon=""
      iconcolor=""
      text="Continue"
      textclass=""
      type="primary-light"
    />
    
  </v-card-actions-stub>
</div>
`;

exports[`ShareDashboardDialog > renders correctly if second page is visible and filteredUsersList length is 0 1`] = `
<div
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Share dashboard"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <div
      class="mx-2"
    >
      <v-stepper-stub
        altlabels="false"
        border="false"
        class="mb-2"
        disabled="false"
        editable="false"
        flat="false"
        hideactions="false"
        itemprops="props"
        items=""
        itemtitle="title"
        itemvalue="value"
        mandatory="force"
        mobile="false"
        modelvalue="2"
        multiple="false"
        nexttext="$vuetify.stepper.next"
        nonlinear="false"
        prevtext="$vuetify.stepper.prev"
        selectedclass="v-stepper-item--selected"
        tag="div"
        tile="false"
      >
        <v-stepper-header-stub
          tag="div"
        >
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="1"
          >
            Tabs
          </v-stepper-item-stub>
          <v-divider-stub
            gradient="false"
            inset="false"
            variant="solid"
            vertical="false"
          />
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="2"
          >
            Users
          </v-stepper-item-stub>
        </v-stepper-header-stub>
      </v-stepper-stub>
      <!--v-if-->
      
      <share-dashboard-dialog-filter-stub
        filter="[object Object]"
      />
      <empty-view-stub
        description="Please try again with other settings."
        descriptionrows=""
        header="No results"
        imgurl="no-filter-results"
        imgwidth="290px"
        primarybtn=""
        primarybtnicon=""
        secondarybtn=""
        secondarybtncolor=""
        secondarybtnicon=""
        small="false"
        tertiarybtn=""
        tertiarybtnicon=""
      />
      
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <evocon-v-button-stub
      color=""
      icon="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
      iconcolor=""
      text="Back"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      loading="false"
      text="Share"
      textclass=""
      type="primary"
    />
    
  </v-card-actions-stub>
</div>
`;

exports[`ShareDashboardDialog > renders correctly if second page is visible and filteredUsersList length is more than 0 1`] = `
<div
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Share dashboard"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <div
      class="mx-2"
    >
      <v-stepper-stub
        altlabels="false"
        border="false"
        class="mb-2"
        disabled="false"
        editable="false"
        flat="false"
        hideactions="false"
        itemprops="props"
        items=""
        itemtitle="title"
        itemvalue="value"
        mandatory="force"
        mobile="false"
        modelvalue="2"
        multiple="false"
        nexttext="$vuetify.stepper.next"
        nonlinear="false"
        prevtext="$vuetify.stepper.prev"
        selectedclass="v-stepper-item--selected"
        tag="div"
        tile="false"
      >
        <v-stepper-header-stub
          tag="div"
        >
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="1"
          >
            Tabs
          </v-stepper-item-stub>
          <v-divider-stub
            gradient="false"
            inset="false"
            variant="solid"
            vertical="false"
          />
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="2"
          >
            Users
          </v-stepper-item-stub>
        </v-stepper-header-stub>
      </v-stepper-stub>
      <!--v-if-->
      
      <share-dashboard-dialog-filter-stub
        filter="[object Object]"
      />
      <selection-list-stub
        checkbox="true"
        class="disabled-list-item-with-icon"
        dense="false"
        disabled="false"
        emptyequalsallselected="false"
        height="auto"
        hidesearch="true"
        hideselectall="false"
        isdropdown="true"
        issearchfocused="false"
        issingleselect="false"
        itemdisabled="[Function]"
        itemflag=""
        itemiconcolorkey=""
        items="[object Object],[object Object]"
        itemsecondarytext="formattedRoles"
        itemtertiarytext=""
        itemtext="fullName"
        itemvalue="username"
        loading="false"
        maxheight="491.20000000000005px"
        maxwidth=""
        modelvalue=""
        required="false"
        search=""
        searchbysecondarytext="false"
        someselected="false"
        valid="true"
      />
      
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <evocon-v-button-stub
      color=""
      icon="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
      iconcolor=""
      text="Back"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      loading="false"
      text="Share"
      textclass=""
      type="primary"
    />
    
  </v-card-actions-stub>
</div>
`;

exports[`ShareDashboardDialog > renders correctly if second page is visible and users request is loading 1`] = `
<div
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Share dashboard"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <div
      class="mx-2"
    >
      <v-stepper-stub
        altlabels="false"
        border="false"
        class="mb-2"
        disabled="false"
        editable="false"
        flat="false"
        hideactions="false"
        itemprops="props"
        items=""
        itemtitle="title"
        itemvalue="value"
        mandatory="force"
        mobile="false"
        modelvalue="2"
        multiple="false"
        nexttext="$vuetify.stepper.next"
        nonlinear="false"
        prevtext="$vuetify.stepper.prev"
        selectedclass="v-stepper-item--selected"
        tag="div"
        tile="false"
      >
        <v-stepper-header-stub
          tag="div"
        >
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="1"
          >
            Tabs
          </v-stepper-item-stub>
          <v-divider-stub
            gradient="false"
            inset="false"
            variant="solid"
            vertical="false"
          />
          <v-stepper-item-stub
            color="primary"
            complete="false"
            completeicon="$complete"
            disabled="false"
            editable="false"
            editicon="$edit"
            error="false"
            erroricon="$error"
            ripple="true"
            rules=""
            value="2"
          >
            Users
          </v-stepper-item-stub>
        </v-stepper-header-stub>
      </v-stepper-stub>
      <!--v-if-->
      
      <share-dashboard-dialog-filter-stub
        filter="[object Object]"
      />
      <div
        class="d-flex justify-center align-center"
        style="height: 491.20000000000005px;"
      >
        <v-progress-circular-stub
          color="primary"
          indeterminate="true"
          modelvalue="0"
          reveal="false"
          rotate="0"
          rounded="false"
          size="default"
          tag="div"
          width="4"
        />
      </div>
      
    </div>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <evocon-v-button-stub
      color=""
      icon="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
      iconcolor=""
      text="Back"
      textclass=""
      type="primary"
    />
    <v-spacer-stub
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Cancel"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      color="primary"
      disabled="true"
      icon=""
      iconcolor=""
      loading="false"
      text="Share"
      textclass=""
      type="primary"
    />
    
  </v-card-actions-stub>
</div>
`;
